# stm32eth

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  STM32H723.svd  STM32H723ZGTX_FLASH.ld  buildlwip.sh  env.src  ozone.jdebug  startup_stm32h723zgtx.s
BSP/lan8742/: lan8742.c
Inc/: FreeRTOSConfig.h  ethif.h  hw_delay.h  lwipopts.h  stm32f4xx_hal_conf.h
Inc/arch/: cc.h
Src/: STM32F407VGTx_FLASH.ld  app_ethernet.c  ethernetif.c  ethif.c  exception.c  main.c  startup_stm32f407xx.s  sys_arch.c  syscalls.c  sysmem.c
drivers/hal/inc/: stm32f4xx_hal_eth_ksz8081.h
drivers/hal/src/: CMakeLists.txt  stm32f4xx_hal_eth_ksz8081.c
drivers/ksz8021rnl/inc/: ksz8021nrl.h  ksz8021rnl.h
drivers/ksz8021rnl/src/: CMakeLists.txt  ksz8021nrl.c  ksz8021rnl.c
drivers/ksz8081rnd/inc/: ksz8081rnd.h
drivers/ksz8081rnd/src/: CMakeLists.txt  ksz8081rnd.c
drivers/wh1602/src/: CMakeLists.txt
inc/: FreeRTOSConfig.h  echo_server.h  ethernetif.h  lwipopts.h  main.h  stm32f4xx_hal_conf.h  tasks_def.h
inc/arch/: cc.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  echo_server.c  ethernetif.c  main.c  stm32f4xx_it.c  sysmem.c
src/arch/: sys_arch.c
startup/: CMakeLists.txt
