cmake_minimum_required(VERSION 3.0)
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
project(stm32eth.elf NONE)

set(LOCAL_SRCS "")
set(LOCAL_HDRS "")

add_definitions(-DHSE_VALUE=8000000U)
add_definitions(-DUSE_HAL_DRIVER)
add_definitions(-DDEBUG)
add_definitions(-DSTM32F407xx)
add_definitions(-DETH_PHY_KSZ8021RNL)

set(LWIP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../lib/lwip)
set (LWIP_INCLUDE_DIRS
    "${LWIP_DIR}/src/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/../inc"
    "${CMAKE_CURRENT_SOURCE_DIR}/../inc/arch")

include(${LWIP_DIR}/src/Filelists.cmake)

set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/../linker/STM32F407VGTX_FLASH.ld")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=cortex-m4 -std=gnu11 -g3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb")

file(GLOB LOCAL_HDRS "${CMAKE_CURRENT_SOURCE_DIR}/../inc/*.h")

set(LOCAL_SRCS
    "stm32f4xx_it.c"
    "system_stm32f4xx.c"
    "ethernetif.c"
    "syscalls.c"
    "sysmem.c"
    "main.c")

include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../drivers/CMSIS/core/inc")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../drivers/dev/inc")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../drivers/hal/inc")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../drivers/ksz8021rnl/inc")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../lib/lwip/src/include")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} "../inc")

set (CMAKE_EXE_LINKER_FLAGS "-T${LINKER_SCRIPT} -Wl,-Map=${PROJECT_NAME}.map -Wl,--gc-sections -Wl,--start-group -Wl,-lc -Wl,-lm -Wl,--end-group")

add_executable(${PROJECT_NAME} ${LOCAL_SRCS} ${LOCAL_HDRS})

target_include_directories(stm32eth.elf PRIVATE ${LWIP_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} stm32f407hal ksz8021rnl lwipcore startup)

